# Inside of setup.cfg
[metadata]
description-file = README.md
name = PACFISH
version = file: VERSION
author = International Photoacoustic Standardisation Consortium (IPASC)
author_email = janek.grohl@cruk.cam.ac.uk
description = Photoacoustic Converter for Information Sharing (PACFISH)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IPASC/PACFISH/
project_urls =
    Bug Tracker = https://github.com/IPASC/PACFISH/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent